--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ databases==0.7.0
 exceptiongroup==1.1.2
 fastapi==0.101.0
 greenlet==2.0.2
+gunicorn==21.2.0
+jinja2==3.1.2
 h11==0.14.0
 idna==3.4
 pydantic==2.1.1
