Добавлен yml для docker-compose и разделены requirements

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10
 
 RUN mkdir /fastapi_server
 
-COPY ./requirements.txt /fastapi_server/requirements.txt
+COPY requirements.txt /fastapi_server/requirements.txt
 
 WORKDIR /fastapi_server
 
