--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,8 @@
 name: Deploy
 on:
-  pull_request:
-    types: [closed]
+ push:
+   branches:
+     - main
 jobs:
   deploy:
     if: github.event.pull_request.merged == true
@@ -17,7 +18,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            sudo docker-compose down
+            docker-compose down
             sudo rm -rf /chainpeers
 
       - name: Copy files to server
@@ -37,5 +38,5 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /chainpeers/api
-            sudo docker-compose up -d
+            docker-compose up -d
 
