--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,8 +1,8 @@
 name: Unittests
 on:
- push:
-   branches:
-     - main
+  push:
+    branches:
+      - '**'
 jobs:
  unittesting:
    runs-on: ubuntu-latest
@@ -13,7 +13,11 @@ jobs:
        uses: actions/setup-python@v2
        with:
          python-version: 3.10
+     - name: Go to scrapper dir
+       run: cd scrapper
      - name: Install dependencies
        run: pip install -r requirements.txt
+     - name: Go to tests dir
+       run: cd workers/tests
      - name: Run Unit Tests
-       run: python -m unittest
+       run: python -m unittest discover .
