--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,7 +2,7 @@ name: Linter
 on:
  push:
    branches:
-     - main
+     - '**'
 jobs:
  lint:
    runs-on: ubuntu-latest
@@ -13,9 +13,15 @@ jobs:
        uses: actions/setup-python@v2
        with:
          python-version: 3.10
-     - name: Install dependencies
+     - name: Go to api
+       run: cd api
+     - name: Install dependencies api
+       run: pip install -r requirements.txt
+     - name: Go back
+       run: cd ../
+     - name: Go to scrapper
+       run: cd scrapper
+     - name: Install dependencies scrapper
        run: pip install -r requirements.txt
      - name: Run Ruff
        uses: astral-sh/ruff-action@v0.0.277
-     - name: Run Unit Tests
-       run: python -m unittest
