--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -8,11 +8,11 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout code
-       uses: actions/checkout@v2
+       uses: actions/checkout@v4
      - name: Set up Python
-       uses: actions/setup-python@v2
+       uses: actions/setup-python@v4
        with:
-         python-version: 3.10
+         python-version: '3.10'
      - name: Go to api
        run: cd api
      - name: Install dependencies api
@@ -23,5 +23,7 @@ jobs:
        run: cd scrapper
      - name: Install dependencies scrapper
        run: pip install -r requirements.txt
+     - name: Install Ruff
+       run: pip install ruff
      - name: Run Ruff
-       uses: astral-sh/ruff-action@v0.0.277
+       run: ruff lint
