--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,19 +13,15 @@ jobs:
        uses: actions/setup-python@v4
        with:
          python-version: '3.10'
-     - name: Go to api
-       run: cd chainpeers/api
-     - name: Install dependencies api
-       run: pip install -r requirements.txt
-     - name: Go back
-       run: cd ../
-     - name: Go to scrapper
-       run: cd scrapper
-     - name: Install dependencies scrapper
-       run: pip install -r requirements.txt
-     - name: Go back again
-       run: cd ../
-     - name: Install Ruff
-       run: pip install ruff
-     - name: Run Ruff
-       run: ruff check .
+     - name: Install Requirements
+       run: |
+          cd api
+          pip install -r requirements.txt
+          cd ../
+          cd scrapper
+          pip install -r requirements.txt
+          cd ../
+     - name: Ruff
+       run: |
+          pip install ruff
+          ruff check .
