--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -17,7 +17,8 @@ jobs:
        run: |
           cd scrapper
           pip install -r requirements.txt
+          cd ../
      - name: Run Unittests
        run: |
-          cd workers/tests
+          cd scrapper/workers/tests
           python -m unittest discover .
