Линтер. Реакция на пул реквест

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,6 +3,14 @@ on:
  push:
    branches:
      - '**'
+ pull_request:
+   branches:
+     - '**'
+   types:
+     - opened
+     - reopened
+     - synchronize
+     - ready_for_review
 jobs:
  lint:
    runs-on: ubuntu-latest
