--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -3,6 +3,14 @@ on:
   push:
     branches:
       - '**'
+  pull_request:
+    branches:
+      - '**'
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 jobs:
  unittesting:
    runs-on: ubuntu-latest
